# TranscriptingMLDL

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
001bike-sharing-demand/: Bike-Sharing-Demand.ipynb  submission.csv
002KAGGLEs/001bike-sharing-demand/: Bike-Sharing-Demand.ipynb
002KAGGLEs/003safe-driver-prediction/: SafeDriverPrediction.ipynb
002cat-feature-encoding/: CatFeatureEncoding.ipynb
003safe-driver-prediction/: SafeDriverPrediction.ipynb  myUtilityFunctions.py
011code_lab/: 001kmeans.ipynb
021Bayesian/: Exercise002.Emitter-Detector.ipynb  Exercise003.Hierachical Models.ipynb
modules/: __init__.py
