[tool.poetry]
name = "transcriptingmldl"
version = "0.1.0"
description = "\"This environmet will be used for transcripting of Problem Solving with DLML\""
authors = ["lightman <mohandas3212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
kaggle = "^1.5.12"
bayesian-optimization = "^1.4.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
