[tool.poetry]
name = "transcriptingmldl"
version = "0.1.0"
description = "\"This environmet will be used for transcripting of Problem Solving with DLML\""
authors = ["lightman <mohandas3212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
kaggle = "^1.5.12"
bayesian-optimization = "^1.4.2"
jupyter = "^1.0.0"
boto3 = "^1.33.0"
gspread = "^5.12.0"
pydata-google-auth = "^1.8.2"
google = "^3.0.0"
google-cloud = "^0.34.0"
hangul-romanize = "^0.1.0"
gspread-dataframe = "^3.3.1"
google-cloud-bigquery = "^3.13.0"
pandas-gbq = "^0.19.2"
db-dtypes = "^1.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
